--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ p {
 
 h1, h2{
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 30px !important;
 }
 
 h2{
@@ -212,7 +212,7 @@ h3 {
 }
 
 .clipboard {
-    margin-bottom: 40px;
+    margin: 100px 0 !important;
 }
 
 .footer{
